--- a/index.html
+++ b/index.html
@@ -67,6 +67,6 @@
             </div>
         </div>
     </div>
-    <script src="/scripts/app.js" ></script>
+    <script src="./scripts/app.js" ></script>
 </body>
 </html>
