--- a/index.html
+++ b/index.html
@@ -1,36 +1,37 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8" />
-    <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
-    <meta
-      http-equiv="Content-Security-Policy"
-      content="default-src 'self'; script-src 'self'"
-    />
-    <meta
-      http-equiv="X-Content-Security-Policy"
-      content="default-src 'self'; script-src 'self'"
-    />
-    <title>Zen Task & Timer</title>
-    <link rel="stylesheet" href="./style/styles.css">
-</head>
+    <head>
+        <meta charset="UTF-8" />
+        <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
+        <meta
+            http-equiv="Content-Security-Policy"
+            content="default-src 'self'; script-src 'self'"
+        />
+        <meta
+            http-equiv="X-Content-Security-Policy"
+            content="default-src 'self'; script-src 'self'"
+        />
+        <title>Zen Task & Timer</title>
+        <link rel="stylesheet" href="./style/styles.css">
+    </head>
 <body>
+    <div class="navBar">
+        <div class="header">
+            <h2>Zen Task & Timer</h2>
+        </div>
+        <div class="loginDiv"></div>
+    </div>
     <div class="mainContainer">
-        <div class="navBar">
-            <div class="header">
-                <h2>Zen Task & Timer</h2>
+        <div class="welcomeAndTimerDiv">
+            <div class="welcomeHeaderDiv">
+                <h1 class="welcomeHeader"> Welcome, {Username}!</h1>
+                <h4 class="motd">Message of the day:</h4>
+                <p class="motdContent">I hope you have a productive day!</p>
             </div>
-            <div class="loginDiv"></div>
-        </div>
-        <div class="welcomeHeaderDiv">
-            <h1 class="welcomeHeader"> Welcome, {Username}!</h1>
-            <h4 class="motd">Message of the day:</h4>
-            <p class="motdContent">I hope you have a productive day!</p>
-        </div>
         <div class="timerDiv">
             <div class="timer">
                 <div class="timerClock">
-                    <h2 id="timerCount">25:00</h2>
+                    <h2 id="timerCount"></h2>
                 </div>
                 <div class="controlBar">
                     <div class="line1div"><hr class="line1"></div>
@@ -47,11 +48,11 @@
                 </div>
             </div>
         </div>
+        </div>
         <div class="tasksDiv">
-            <div class="tasks">
                 <div class="taskHeaderDiv">
                     <div class="taskHeader">
-                        <h2 class="taskHeading">Your Tasks:</h2>
+                        <h2 class="taskHeading">Tasks:</h2>
                     </div>
                     <div class="settingsDiv">
                         <div class="sortButtonDiv"></div>
@@ -60,13 +61,12 @@
                 </div>
                 <div class="taskContainerDiv">
                     <ul class="taskList">
-                        <li class="taskItem"></li>
+                        <li class="taskItem">Task item text here</li>
                     </ul>
                 </div>
-                <div class="footerDiv"></div>
-            </div>
         </div>
     </div>
+    <div class="footerDiv"></div>
     <script src="./scripts/app.js" ></script>
 </body>
 </html>
