Adjustments to styling. Added an example task item and its details.

--- a/index.html
+++ b/index.html
@@ -56,12 +56,24 @@
                     </div>
                     <div class="settingsDiv">
                         <div class="sortButtonDiv"></div>
-                        <div class="alertButtonDiv"></div>
+                        <div class="filterButtonDiv"></div>
                         </div>
                 </div>
                 <div class="taskContainerDiv">
                     <ul class="taskList">
-                        <li class="taskItem">Task item text here</li>
+                        <li class="taskItem">
+                            <div class="taskItemEffortDiv">
+                                <p class="taskItemEffort">3hr</p>
+                            </div>
+                            
+                            <div class="taskItemDetailsDiv">
+                                <h3 class="taskItemName">Task name here</h3>
+                                <p class="taskItemDueDate">Due By: May 20th, 2025 @ 17:30</p>
+                            </div>
+                            <div class="taskItemPriorityDiv">
+                                    <p class="taskItemPriority">High</p>
+                                </div>
+                        </li>
                     </ul>
                 </div>
         </div>
