--- a/index.html
+++ b/index.html
@@ -51,24 +51,25 @@
         </div>
         <div class="tasksDiv">
                 <div class="taskHeaderDiv">
-                    <div class="taskHeader">
-                        <h2 class="taskHeading">Tasks:</h2>
-                    </div>
                     <div class="settingsDiv">
                         <div class="sortButtonDiv"></div>
                         <div class="filterButtonDiv"></div>
-                        </div>
+                    </div>
+                    <div class="taskHeader">
+                        <h2 class="taskHeading">Tasks:</h2>
+                    </div>
+                    <button id="addTaskButton">+</button>
                 </div>
                 <div class="taskContainerDiv">
                     <ul class="taskList">
-                        <li class="taskItem">
+                        <li class="taskItem" draggable="true">
                             <div class="taskItemEffortDiv">
                                 <p class="taskItemEffort">3hr</p>
                             </div>
                             
                             <div class="taskItemDetailsDiv">
                                 <h3 class="taskItemName">Task name here</h3>
-                                <p class="taskItemDueDate">Due By: May 20th, 2025 @ 17:30</p>
+                                <p class="taskItemDueDate">Due: 05/20/25 @ 17:30</p>
                             </div>
                             <div class="taskItemPriorityDiv">
                                     <p class="taskItemPriority">High</p>
